Fixes some footer margin issues that popped up after adding list_item.

--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -88,6 +88,12 @@
     }
 
     &_general-inqueries {
+        .respond-to-min(600px, {
+            .list__links .list_item {
+                margin-bottom: 0;
+            }
+        });
+
         .respond-to-min(768px, {
             font-size: unit(12px / @base-font-size-px, em);
         });
