Updates print styles for filtered by pattern.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -12687,14 +12687,6 @@ a.hero_card {
   margin: 0;
 }
 
-.filtered-by__show-on-medium {
-  display: none;
-}
-
-.filtered-by__show-on-medium {
-  display: block;
-}
-
 .filtered-by_header {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
@@ -12747,6 +12739,30 @@ a.hero_card {
 
 .lt-ie9 .filtered-by_filter strong,
 .lt-ie9 .filtered-by_filter b {
+  font-weight: normal !important;
+}
+
+@media print {
+  .filtered-by_filter {
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    color: #101820;
+  }
+
+  .lt-ie9 .filtered-by_filter {
+    font-weight: normal !important;
+  }
+}
+
+.print .filtered-by_filter {
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #101820;
+}
+
+.lt-ie9 .print .filtered-by_filter {
   font-weight: normal !important;
 }
 
