--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12220,14 +12220,6 @@ a.category-slug.active {
 .filtered-by {
   margin: 0;
 }
-.filtered-by__show-on-medium {
-  display: none;
-}
-@media only all and (min-width: 37.5em) {
-  .filtered-by__show-on-medium {
-    display: block;
-  }
-}
 .filtered-by_header {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
@@ -12273,6 +12265,26 @@ a.category-slug.active {
 }
 .lt-ie9 .filtered-by_filter strong,
 .lt-ie9 .filtered-by_filter b {
+  font-weight: normal !important;
+}
+@media print {
+  .filtered-by_filter {
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    color: #101820;
+  }
+  .lt-ie9 .filtered-by_filter {
+    font-weight: normal !important;
+  }
+}
+.print .filtered-by_filter {
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #101820;
+}
+.lt-ie9 .print .filtered-by_filter {
   font-weight: normal !important;
 }
 /* topdoc
