--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -186,6 +186,10 @@
 
         Allows you to disable showing the count label.
 
+   user_options.calendar_filter_order:
+
+        An array of values used in ordering the calendar filters.
+
    user_options.id_prefix:
 
         ID's are automatically added to certain elements that need them, but if
@@ -212,21 +216,22 @@
 {% macro filters(filters, query, posts, doc_type, user_options) %}
 
 {%- set options = {
-    'action':               '/',
-    'expand_label':         'Filter',
-    'submit_label':         'Apply filters',
-    'show_current_filters': true,
-    'show_unfiltered_count':false,
-    'show_filters_label':   true,
-    'id_prefix':            '',
-    'id_tags':              'filter_tags',
-    'id_author':            'filter_author',
-    'id_range_date_gte':    'filter_range-date-gte',
-    'id_range_date_lte':    'filter_range-date-lte',
-    'id_from_month':        'filter_from-month',
-    'id_from_year':         'filter_from-year',
-    'id_to_month':          'filter_to-month',
-    'id_to_year':           'filter_to-year'
+    'action':                   '/',
+    'expand_label':             'Filter',
+    'submit_label':             'Apply filters',
+    'show_current_filters':     true,
+    'show_unfiltered_count':    false,
+    'show_filters_label':       true,
+    'calendar_filter_order':    [],
+    'id_prefix':                '',
+    'id_tags':                  'filter_tags',
+    'id_author':                'filter_author',
+    'id_range_date_gte':        'filter_range-date-gte',
+    'id_range_date_lte':        'filter_range-date-lte',
+    'id_from_month':            'filter_from-month',
+    'id_from_year':             'filter_from-year',
+    'id_to_month':              'filter_to-month',
+    'id_to_year':               'filter_to-year'
 } -%}
 {%- set _ignore = options.update(user_options) -%}
 
@@ -390,7 +395,19 @@
                 <label class="form-label-header">
                     Calendars
                 </label>
-            {% for calendar in query.possible_values_for('calendar')|sort(attribute='term') -%}
+            {% set calendars = query.possible_values_for('calendar')|sort(attribute='term') -%}
+            {% set ordered_calendars = [] -%}
+            {% set non_ordered_calendars = [] -%}
+            {% for id in options.calendar_filter_order -%}
+                {% for calendar in calendars -%}
+                    {% if calendar.term == id -%}
+                        {% set _ignore = ordered_calendars.append(calendar) %}
+                        {% set _ignore = calendars.pop(loop.index0) %}
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+            {%- set _ignore = ordered_calendars.extend(calendars) -%}
+            {% for calendar in ordered_calendars -%}
                 <label class="form-group_item">
                     {{ filter_checkbox('calendar', calendar.term)|safe }}
                 </label>
