--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -76,21 +76,11 @@
 {% macro activity_snippets(tag) %}
     {% from 'macros.html' import string_length as string_length %}
     {% from 'post-macros.html' import activity_snippet as snippet with context %}
-    {% set
-       blog =
-       snippet('posts', 'tags:' + '"'+tag+'"', 2) %}
-    {% set
-       pressrelease =
-       snippet('press release', 'category:"Press Release" AND tags:' + '"'+tag+'"', 2) %}
-    {% set
-       speech =
-       snippet('speech', 'category:Speech AND tags:' + '"'+tag+'"', 2) %}
-    {% set
-       testimony =
-       snippet('testimony', 'category:Testimony AND tags:' + '"'+tag+'"', 2) %}
-    {% set
-       oped =
-       snippet('op-ed', 'category:Op-Ed AND tags:' + '"'+tag+'"', 2) %}
+    {% set blog =         snippet('posts', tag, 2) %}
+    {% set oped =         snippet('op-ed', tag, 2) %}
+    {% set pressrelease = snippet('press release', tag, 2) %}
+    {% set speech =       snippet('speech', tag, 2) %}
+    {% set testimony =    snippet('testimony', tag, 2) %}
    <div class="content-l content-l__large-gutters">
     {% if string_length(blog)|int > 0 %}
         <div class="content-l_col content-l_col-1-2">
@@ -139,31 +129,37 @@
 
    ========================================================================== #}
 
-{% macro activity_snippet(doctype, querystring, quantity) %}
+{% macro activity_snippet(doctype, tags, quantity) %}
     {% if doctype|lower == 'posts' %}
         {% set true_doctype = doctype %}
         {% set icon = category_icon('blog') %}
         {% set header = 'Blog' %}
+        {% set querystring = 'tags:"' + tags + '"' %}
     {% elif doctype|lower == 'op-ed' %}
         {% set true_doctype = 'newsroom' %}
         {% set icon = category_icon(doctype) %}
         {% set header = 'Op-Ed' %}
+        {% set querystring = 'category:"Op-Ed" AND tags:"' + tags + '"' %}
     {% elif doctype|lower == 'press release' %}
         {% set true_doctype = 'newsroom' %}
         {% set icon = category_icon(doctype) %}
         {% set header = 'Press Release' %}
+        {% set querystring = 'category:"Press Release" AND tags:"' + tags + '"' %}
     {% elif doctype|lower == 'speech' %}
         {% set true_doctype = 'newsroom' %}
         {% set icon = category_icon(doctype) %}
         {% set header = 'Speech' %}
+        {% set querystring = 'category:"Speech" AND tags:"' + tags + '"' %}
     {% elif doctype|lower == 'testimony' %}
         {% set true_doctype = 'newsroom' %}
         {% set icon = category_icon(doctype) %}
         {% set header = 'Testimony' %}
+        {% set querystring = 'category:"Testimony" AND tags:"' + tags + '"' %}
     {% else %}
         {% set true_doctype = 'posts' %}
-        {% set header = 'Feed' %}
         {% set icon = category_icon('blog') %}
+        {% set header = 'Feed' %}
+        {% set querystring = 'tags:"' + tags + '"' %}
     {% endif %}
     {% set feed = queries[true_doctype].search_with_url_arguments(size=quantity,q=querystring) %}
     {% if feed.total > 0 %}
