--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -69,45 +69,28 @@
 
    activity_snippets()
 
-   List a bunch of activity snippets when given a tag.
+   List a bunch of activity snippets when given:
+
+   tag:            A tag to use in the query.
+
+   activity_types: An array of activity types.
+                   Possible values: posts, op-ed, press release, speech, testimony
 
    ========================================================================== #}
 
-{% macro activity_snippets(tag) %}
+{% macro activity_snippets(tag, activity_types) %}
     {% from 'macros.html' import string_length as string_length %}
     {% from 'post-macros.html' import activity_snippet as snippet with context %}
-    {% set blog =         snippet('posts', tag, 2) %}
-    {% set oped =         snippet('op-ed', tag, 2) %}
-    {% set pressrelease = snippet('press release', tag, 2) %}
-    {% set speech =       snippet('speech', tag, 2) %}
-    {% set testimony =    snippet('testimony', tag, 2) %}
-   <div class="content-l content-l__large-gutters">
-    {% if string_length(blog)|int > 0 %}
-        <div class="content-l_col content-l_col-1-2">
-            {{ blog }}
-        </div>
-    {% endif %}
-    {% if string_length(pressrelease)|int > 0 %}
-        <div class="content-l_col content-l_col-1-2">
-            {{ pressrelease }}
-        </div>
-    {% endif %}
-    {% if string_length(speech)|int > 0 %}
-        <div class="content-l_col content-l_col-1-2">
-            {{ speech }}
-        </div>
-    {% endif %}
-    {% if string_length(testimony)|int > 0 %}
-        <div class="content-l_col content-l_col-1-2">
-            {{ testimony }}
-        </div>
-    {% endif %}
-    {% if string_length(oped)|int > 0 %}
-        <div class="content-l_col content-l_col-1-2">
-            {{ oped }}
-        </div>
-    {% endif %}
-   </div>
+    <div class="content-l content-l__large-gutters">
+    {% for activity_type in activity_types %}
+        {% set activity = snippet(activity_type, tag, 2) %}
+        {% if string_length(activity)|int > 0 %}
+            <div class="content-l_col content-l_col-1-2">
+                {{ activity }}
+            </div>
+        {% endif %}
+    {% endfor %}
+    </div>
 {% endmacro %}
 
 
@@ -129,39 +112,39 @@
 
    ========================================================================== #}
 
-{% macro activity_snippet(doctype, tags, quantity) %}
-    {% if doctype|lower == 'posts' %}
-        {% set true_doctype = doctype %}
+{% macro activity_snippet(activity_type, tags, quantity) %}
+    {% if activity_type|lower == 'posts' %}
+        {% set doc_type = activity_type %}
         {% set icon = category_icon('blog') %}
         {% set header = 'Blog' %}
         {% set querystring = 'tags:"' + tags + '"' %}
-    {% elif doctype|lower == 'op-ed' %}
-        {% set true_doctype = 'newsroom' %}
-        {% set icon = category_icon(doctype) %}
+    {% elif activity_type|lower == 'op-ed' %}
+        {% set doc_type = 'newsroom' %}
+        {% set icon = category_icon(activity_type) %}
         {% set header = 'Op-Ed' %}
         {% set querystring = 'category:"Op-Ed" AND tags:"' + tags + '"' %}
-    {% elif doctype|lower == 'press release' %}
-        {% set true_doctype = 'newsroom' %}
-        {% set icon = category_icon(doctype) %}
+    {% elif activity_type|lower == 'press release' %}
+        {% set doc_type = 'newsroom' %}
+        {% set icon = category_icon(activity_type) %}
         {% set header = 'Press Release' %}
         {% set querystring = 'category:"Press Release" AND tags:"' + tags + '"' %}
-    {% elif doctype|lower == 'speech' %}
-        {% set true_doctype = 'newsroom' %}
-        {% set icon = category_icon(doctype) %}
+    {% elif activity_type|lower == 'speech' %}
+        {% set doc_type = 'newsroom' %}
+        {% set icon = category_icon(activity_type) %}
         {% set header = 'Speech' %}
         {% set querystring = 'category:"Speech" AND tags:"' + tags + '"' %}
-    {% elif doctype|lower == 'testimony' %}
-        {% set true_doctype = 'newsroom' %}
-        {% set icon = category_icon(doctype) %}
+    {% elif activity_type|lower == 'testimony' %}
+        {% set doc_type = 'newsroom' %}
+        {% set icon = category_icon(activity_type) %}
         {% set header = 'Testimony' %}
         {% set querystring = 'category:"Testimony" AND tags:"' + tags + '"' %}
     {% else %}
-        {% set true_doctype = 'posts' %}
+        {% set doc_type = 'posts' %}
         {% set icon = category_icon('blog') %}
         {% set header = 'Feed' %}
         {% set querystring = 'tags:"' + tags + '"' %}
     {% endif %}
-    {% set feed = queries[true_doctype].search_with_url_arguments(size=quantity,q=querystring) %}
+    {% set feed = queries[doc_type].search_with_url_arguments(size=quantity,q=querystring) %}
     {% if feed.total > 0 %}
     <aside class="activity">
         <h1 class="h4">{{ icon }} {{ header }}</h1>
