--- a/static/css/offices.less
+++ b/static/css/offices.less
@@ -39,3 +39,11 @@
         .h3();
     }
 }
+
+.u-centered-on-mobile {
+    .respond-to-max(@mobile-max, {
+        text-align: center;
+        margin-left: auto; 
+        margin-right: auto;
+    });
+}
