--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8132,6 +8132,66 @@ figure img {
    capital framework enhancements
    ========================================================================== */
 /* topdoc
+  name: Width utilities
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: Percent-based
+      markup: |
+        <div class="u-w95pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w95pct</code>
+        </div>
+        <div class="u-w85pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w85pct</code>
+        </div>
+        <div class="u-w65pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w65pct</code>
+        </div>
+        <div class="u-w55pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w55pct</code>
+        </div>
+        <div class="u-w45pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w45pct</code>
+        </div>
+        <div class="u-w35pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w35pct</code>
+        </div>
+        <div class="u-w15pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w15pct</code>
+        </div>
+        <div class="u-w5pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w5pct</code>
+        </div>
+      notes:
+        - "Inline styles are for demonstration purposes only, please don't use
+           them."
+  tags:
+    - cfgov-cf-enhancements
+*/
+.u-w95pct {
+  width: 95%;
+}
+.u-w85pct {
+  width: 85%;
+}
+.u-w65pct {
+  width: 65%;
+}
+.u-w55pct {
+  width: 55%;
+}
+.u-w45pct {
+  width: 45%;
+}
+.u-w35pct {
+  width: 35%;
+}
+.u-w15pct {
+  width: 15%;
+}
+.u-w5pct {
+  width: 5%;
+}
+/* topdoc
   name: respond-to-print() (mixin)
   notes:
     - "This mixin allows us to easily write styles that target both
@@ -8255,6 +8315,9 @@ thead th {
 .lt-ie9 thead th {
   font-weight: normal !important;
 }
+tbody {
+  border-top: 1px solid #babbbd;
+}
 tbody th {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
@@ -8272,10 +8335,12 @@ tbody tr {
   }
   thead th {
     display: block;
+    width: 100% !important;
   }
   tbody th,
   tbody td {
     display: block;
+    width: 100% !important;
   }
   tbody th + th,
   tbody td + td {
