MArgin tweak and documentation update.

--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -256,7 +256,8 @@
    filters:
 
         An array of the filters that you want.
-        Possible values: author, calendar, category, range_date, tags.
+        Possible values: activity_category, author, calendar, category,
+                         range_date, tags.
 
         Note that 'range_date_gte' and 'range_date_lte' have been condensed
         into 'range_date' for this macro only.
