Fixes responsive table styles.

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -194,6 +194,7 @@ tbody {
 
     thead {
         th {
+            box-sizing: border-box;
             display: block;
             width: 100% !important;
         }
@@ -202,6 +203,7 @@ tbody {
     tbody {
         th,
         td {
+            box-sizing: border-box;
             display: block;
             width: 100% !important;
         }
