--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -288,16 +288,29 @@ tbody {
   patterns:
     - name: Header right float on medium modifier
       codenotes:
-        - .expandable_header-right__float-on-medium
+        - ...
   tags:
     - cfgov-cf-enhancements
 */
 
-.expandable_header-right__float-on-medium {
-    float: none;
+.expandable__filters {
+    margin-bottom: unit(15px / @base-font-size-px, em);
 
-    .respond-to-min(600px, {
-        float: right;
+    &.expandable__expanded {
+        margin-bottom: unit(30px / @base-font-size-px, em);
+    }
+
+    .respond-to-max(@mobile-max, {
+        .expandable_header-right {
+            float: none;
+            // Eyeballed to 15px
+            margin-top: unit(10px / @base-font-size-px, em);
+
+            .btn {
+                display: block;
+                width: 100%;
+            }
+        }
     });
 }
 
