Adds activity log to the nav.

--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -37,6 +37,9 @@
                             <li class="list_item list-expanding_list-item">
                                 <a class="list_link" href="/the-bureau/">About the Bureau</a>
                             </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/activity-log/">Activity Log</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
