Add budget section

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15521,6 +15521,106 @@ button.focus .summary_header {
     top: 39px;
   }
 }
+.budget_page-content ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+.budget_page-content ul .list_item {
+  margin-left: 0;
+}
+.budget_page-content ul .list_item {
+  margin-left: 0;
+}
+.budget_page-content ul .list_item {
+  margin-bottom: 0.625em;
+}
+@media only all and (max-width: 37.4375em) {
+  .budget_page-content ul .list_item {
+    margin-bottom: -1px;
+  }
+}
+.budget_page-content ul.list__spaced .list_item + .list_item {
+  margin-top: 0;
+}
+@media only all and (max-width: 37.4375em) {
+  .budget_page-content ul .list_link {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    padding: 0.625em 1.25em 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+    margin-right: 0;
+    width: 100%;
+    text-align: left;
+  }
+  .budget_page-content ul .list_link.icon-link:after {
+    position: absolute;
+    margin-bottom: -0.625em;
+    right: 0;
+    bottom: 50%;
+    text-align: right;
+  }
+  .budget_page-content ul .list_link .icon-link_text {
+    border-bottom-width: 0;
+  }
+}
+.budget_page-content ul.list__icons .list_link {
+  position: relative;
+  left: -0.125em;
+}
+.budget_page-content ul.list__icons .icon-link:before,
+.budget_page-content ul.list__icons .icon-link:after {
+  width: 1.125em;
+  text-align: center;
+}
+.budget_page-content ul .list_link {
+  position: relative;
+  left: -0.125em;
+}
+.budget_page-content ul .icon-link:before,
+.budget_page-content ul .icon-link:after {
+  width: 1.125em;
+  text-align: center;
+}
+.budget_page-content ul li {
+  margin-left: 0;
+  margin-bottom: 0.625em;
+}
+@media only all and (max-width: 37.4375em) {
+  .budget_page-content ul li {
+    margin-bottom: -1px;
+  }
+}
+.budget_page-content ul li a {
+  position: relative;
+  left: -0.125em;
+}
+@media only all and (max-width: 37.4375em) {
+  .budget_page-content ul li a {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    padding: 0.625em 1.25em 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+    margin-right: 0;
+    width: 100%;
+    text-align: left;
+  }
+  .budget_page-content ul li a.icon-link:after {
+    position: absolute;
+    margin-bottom: -0.625em;
+    right: 0;
+    bottom: 50%;
+    text-align: right;
+  }
+  .budget_page-content ul li a .icon-link_text {
+    border-bottom-width: 0;
+  }
+}
 .bureau-mission {
   margin-bottom: 2.8125em;
 }
@@ -16434,6 +16534,102 @@ button.focus .summary_header {
 .lt-ie9 .history-item_date {
   font-weight: normal !important;
 }
+@media only all and (max-width: 37.4375em) {
+  .office .content-l_col__before-divider.content-l_col-1-2 {
+    margin-top: 1.875em;
+  }
+  .office .content-l_col__before-divider.content-l_col-1-2:before {
+    display: none;
+  }
+}
+@media only all and (max-width: 37.4375em) {
+  .office_initiatives .expandables-group {
+    border-top: 1px solid #e3e4e5;
+  }
+}
+.office_initiatives .expandable.content-l_col {
+  margin-bottom: 1.875em;
+}
+@media only all and (max-width: 37.4375em) {
+  .office_initiatives .expandable.content-l_col {
+    margin-bottom: 1.875em;
+    background: #f1f2f2;
+    margin-bottom: 0;
+    margin-top: 0;
+    border-bottom: 1px solid #e3e4e5;
+  }
+  .office_initiatives .expandable.content-l_col:hover,
+  .office_initiatives .expandable.content-l_col.expandable__expanded {
+    background: #e3e4e5;
+  }
+  .office_initiatives .expandable.content-l_col .expandable_header {
+    padding: 0.625em 1em;
+  }
+  .office_initiatives .expandable.content-l_col .expandable_content {
+    margin: 0 1em 1.375em;
+  }
+  .office_initiatives .expandable.content-l_col .expandable_content:before {
+    content: '';
+    display: block;
+    height: 1px;
+    margin-bottom: 1em;
+    background: #babbbd;
+  }
+  .office_initiatives .expandable.content-l_col .expandable_content {
+    padding-bottom: 1.875em;
+    margin-bottom: 0;
+  }
+}
+.initiative_description p:first-child {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.95454545em;
+  font-size: 1.375em;
+  line-height: 1.27272727;
+}
+.initiative_description p:first-child em,
+.initiative_description p:first-child i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .initiative_description p:first-child em,
+.lt-ie9 .initiative_description p:first-child i {
+  font-style: normal !important;
+}
+.initiative_description p:first-child strong,
+.initiative_description p:first-child b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .initiative_description p:first-child strong,
+.lt-ie9 .initiative_description p:first-child b {
+  font-weight: normal !important;
+}
+@media only all and (max-width: 37.4375em) {
+  .initiative_description p:first-child {
+    margin-top: 0;
+    margin-bottom: 1.16666667em;
+    font-size: 1.125em;
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.22222222;
+  }
+  .lt-ie9 .initiative_description p:first-child {
+    font-weight: normal !important;
+  }
+}
+@media only all and (max-width: 37.4375em) {
+  .u-centered-on-mobile {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 /* ==========================================================================
    cfgov-refresh
    Press resources (Newsroom)
@@ -16794,102 +16990,6 @@ button.focus .summary_header {
   .contact-person__director .contact-person_photo {
     width: 180px;
     margin-right: 1.875em;
-  }
-}
-@media only all and (max-width: 37.4375em) {
-  .office .content-l_col__before-divider.content-l_col-1-2 {
-    margin-top: 1.875em;
-  }
-  .office .content-l_col__before-divider.content-l_col-1-2:before {
-    display: none;
-  }
-}
-@media only all and (max-width: 37.4375em) {
-  .office_initiatives .expandables-group {
-    border-top: 1px solid #e3e4e5;
-  }
-}
-.office_initiatives .expandable.content-l_col {
-  margin-bottom: 1.875em;
-}
-@media only all and (max-width: 37.4375em) {
-  .office_initiatives .expandable.content-l_col {
-    margin-bottom: 1.875em;
-    background: #f1f2f2;
-    margin-bottom: 0;
-    margin-top: 0;
-    border-bottom: 1px solid #e3e4e5;
-  }
-  .office_initiatives .expandable.content-l_col:hover,
-  .office_initiatives .expandable.content-l_col.expandable__expanded {
-    background: #e3e4e5;
-  }
-  .office_initiatives .expandable.content-l_col .expandable_header {
-    padding: 0.625em 1em;
-  }
-  .office_initiatives .expandable.content-l_col .expandable_content {
-    margin: 0 1em 1.375em;
-  }
-  .office_initiatives .expandable.content-l_col .expandable_content:before {
-    content: '';
-    display: block;
-    height: 1px;
-    margin-bottom: 1em;
-    background: #babbbd;
-  }
-  .office_initiatives .expandable.content-l_col .expandable_content {
-    padding-bottom: 1.875em;
-    margin-bottom: 0;
-  }
-}
-.initiative_description p:first-child {
-  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  margin-top: 0;
-  margin-bottom: 0.95454545em;
-  font-size: 1.375em;
-  line-height: 1.27272727;
-}
-.initiative_description p:first-child em,
-.initiative_description p:first-child i {
-  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
-  font-style: italic;
-  font-weight: normal;
-}
-.lt-ie9 .initiative_description p:first-child em,
-.lt-ie9 .initiative_description p:first-child i {
-  font-style: normal !important;
-}
-.initiative_description p:first-child strong,
-.initiative_description p:first-child b {
-  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-}
-.lt-ie9 .initiative_description p:first-child strong,
-.lt-ie9 .initiative_description p:first-child b {
-  font-weight: normal !important;
-}
-@media only all and (max-width: 37.4375em) {
-  .initiative_description p:first-child {
-    margin-top: 0;
-    margin-bottom: 1.16666667em;
-    font-size: 1.125em;
-    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.22222222;
-  }
-  .lt-ie9 .initiative_description p:first-child {
-    font-weight: normal !important;
-  }
-}
-@media only all and (max-width: 37.4375em) {
-  .u-centered-on-mobile {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 /* Demo-specific styles
