--- a/static/css/main.less
+++ b/static/css/main.less
@@ -116,12 +116,13 @@
    ========================================================================== */
 
 @import (less) "beta.less";
+@import (less) "budget.less";
 @import (less) "bureau.less";
 @import (less) "bureau-structure.less";
 @import (less) "contact-us.less";
 @import (less) "history.less";
-@import (less) "press-resources.less";
 @import (less) "offices.less";
+@import (less) "press-resources.less";
 
 
 /* Demo-specific styles
